<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:showAsAction="ifRoom"
        app:actionViewClass="androidx.appcompat.widget.SearchView"/>
      <group android:checkableBehavior="single">
          <item android:id="@+id/sort_by"
          android:title="@string/sort_by">
              <menu>
                  <item android:title="@string/high_priority"
                      android:id="@+id/high_priority"/>
                  <item android:title="@string/low_priority"
                      android:id="@+id/low_priority"/>
              </menu>
          </item>

      </group>
        <item android:title="@string/delete_all"
            android:id="@+id/delete_all"
            app:showAsAction="never"

           />



</menu>